roles/homelab_monitoring/files/prometheus-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: homelab-monitoring
spec:
  selector:
    app: prometheus
  # type: LoadBalancer
  ports:
    - name: web
      protocol: TCP
      port: 9090
      targetPort: 9090
  # loadBalancerIP: 192.168.0.205
