roles/homelab_monitoring/files/prometheus-ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: prometheus
  namespace: homelab-monitoring
spec:
  entryPoints: 
    - web
  routes:
  - match: Host(`prom-hl.local.lan`) 
    kind: Rule
    services:
    - name: prometheus
      port: 9090
